[gd_scene load_steps=65 format=2]

[ext_resource path="res://scenes/Player.gd" type="Script" id=1]
[ext_resource path="res://sprites/adventurer-Sheet.png" type="Texture" id=2]
[ext_resource path="res://scenes/Node2D.tscn" type="PackedScene" id=74]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19.5, 36 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "attack_1"
length = 0.512
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.01, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 42, 43, 44, 45, 46, 47 ]
}

[sub_resource type="Animation" id=5]
resource_name = "attack_2"
length = 0.35
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 49, 50, 51, 52 ]
}

[sub_resource type="Animation" id=16]
resource_name = "attack_3"
length = 0.55
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 53, 54, 55, 56, 57, 58 ]
}

[sub_resource type="Animation" id=6]
resource_name = "climb"
length = 0.3
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37 ]
}

[sub_resource type="Animation" id=7]
resource_name = "crouch"
length = 1.6
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=17]
resource_name = "die"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 63, 64, 65, 66, 67, 68 ]
}

[sub_resource type="Animation" id=8]
resource_name = "fall"
length = 0.4
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 22, 23 ]
}

[sub_resource type="Animation" id=9]
resource_name = "idle"
length = 1.6
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=10]
resource_name = "idle_sword"
length = 1.6
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 38, 39, 40, 41 ]
}

[sub_resource type="Animation" id=11]
resource_name = "in_corner"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 29, 30, 31, 32 ]
}

[sub_resource type="Animation" id=12]
resource_name = "jump"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16, 17 ]
}

[sub_resource type="Animation" id=13]
resource_name = "jump_2"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21 ]
}

[sub_resource type="Animation" id=14]
resource_name = "run"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13 ]
}

[sub_resource type="Animation" id=15]
resource_name = "slide"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28 ]
}

[sub_resource type="AnimationNodeAnimation" id=79]
animation = "attack_1"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "attack_1"

[sub_resource type="AnimationNodeAnimation" id=80]
animation = "attack_2"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "attack_2"

[sub_resource type="AnimationNodeAnimation" id=81]
animation = "attack_3"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "attack_3"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "climb"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "crouch"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "die"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "fall"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "idle_sword"

[sub_resource type="AnimationNodeAnimation" id=75]
animation = "in_corner"

[sub_resource type="AnimationNodeAnimation" id=69]
animation = "jump"

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "jump_2"

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "run"

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "slide"

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachineTransition" id=40]

[sub_resource type="AnimationNodeStateMachineTransition" id=41]

[sub_resource type="AnimationNodeStateMachineTransition" id=43]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=45]

[sub_resource type="AnimationNodeStateMachineTransition" id=46]

[sub_resource type="AnimationNodeStateMachineTransition" id=47]

[sub_resource type="AnimationNodeStateMachineTransition" id=53]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=61]

[sub_resource type="AnimationNodeStateMachineTransition" id=62]

[sub_resource type="AnimationNodeStateMachineTransition" id=63]

[sub_resource type="AnimationNodeStateMachineTransition" id=70]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=71]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=73]

[sub_resource type="AnimationNodeStateMachineTransition" id=74]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=76]

[sub_resource type="AnimationNodeStateMachineTransition" id=77]

[sub_resource type="AnimationNodeStateMachineTransition" id=78]

[sub_resource type="AnimationNodeStateMachineTransition" id=82]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=83]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=84]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=85]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=18]
states/attack_1/node = SubResource( 20 )
states/attack_1/position = Vector2( -408.313, -10.856 )
"states/attack_1 2/node" = SubResource( 79 )
"states/attack_1 2/position" = Vector2( -715, 3.51302 )
states/attack_2/node = SubResource( 21 )
states/attack_2/position = Vector2( -535.313, 56.144 )
"states/attack_2 2/node" = SubResource( 80 )
"states/attack_2 2/position" = Vector2( -715, 76.513 )
states/attack_3/node = SubResource( 22 )
states/attack_3/position = Vector2( -556.313, 210.144 )
"states/attack_3 2/node" = SubResource( 81 )
"states/attack_3 2/position" = Vector2( -715, 144.144 )
states/climb/node = SubResource( 23 )
states/climb/position = Vector2( 59.687, -216.856 )
states/crouch/node = SubResource( 24 )
states/crouch/position = Vector2( 172.687, 84.144 )
states/die/node = SubResource( 25 )
states/die/position = Vector2( -140.313, 106.144 )
states/fall/node = SubResource( 26 )
states/fall/position = Vector2( -327.313, -216.856 )
states/idle/node = SubResource( 27 )
states/idle/position = Vector2( -140.313, 22.144 )
states/idle_sword/node = SubResource( 28 )
states/idle_sword/position = Vector2( -389.876, 294.144 )
states/in_corner/node = SubResource( 75 )
states/in_corner/position = Vector2( -723.876, -114.856 )
states/jump/node = SubResource( 69 )
states/jump/position = Vector2( -723.876, -209.731 )
states/jump_2/node = SubResource( 31 )
states/jump_2/position = Vector2( -723.876, -161.856 )
states/run/node = SubResource( 32 )
states/run/position = Vector2( 59.687, -80.856 )
states/slide/node = SubResource( 33 )
states/slide/position = Vector2( 190.687, -23.856 )
transitions = [ "idle", "attack_1", SubResource( 34 ), "idle", "die", SubResource( 37 ), "idle", "run", SubResource( 39 ), "idle", "fall", SubResource( 40 ), "idle", "slide", SubResource( 41 ), "slide", "idle", SubResource( 43 ), "run", "idle", SubResource( 45 ), "crouch", "idle", SubResource( 46 ), "idle", "crouch", SubResource( 47 ), "climb", "idle", SubResource( 53 ), "fall", "idle", SubResource( 61 ), "idle", "attack_2", SubResource( 62 ), "idle", "attack_3", SubResource( 63 ), "attack_1", "idle_sword", SubResource( 70 ), "attack_2", "idle_sword", SubResource( 71 ), "idle_sword", "idle", SubResource( 73 ), "attack_3", "idle", SubResource( 74 ), "fall", "climb", SubResource( 76 ), "run", "climb", SubResource( 77 ), "idle", "climb", SubResource( 78 ), "attack_1 2", "attack_2 2", SubResource( 82 ), "attack_2 2", "attack_3 2", SubResource( 83 ), "attack_3 2", "attack_1 2", SubResource( 84 ), "slide", "climb", SubResource( 85 ) ]
start_node = "idle"
end_node = "die"
graph_offset = Vector2( -876.235, -237.298 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=19]

[sub_resource type="RectangleShape2D" id=67]
extents = Vector2( 17, 38.25 )

[sub_resource type="RectangleShape2D" id=68]
extents = Vector2( 14.5, 7 )

[node name="Node" type="Node"]

[node name="player" type="KinematicBody2D" parent="."]
position = Vector2( 319, 295 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="player"]
scale = Vector2( 2.2, 2.36486 )
texture = ExtResource( 2 )
hframes = 7
vframes = 11

[node name="Player_area" type="CollisionShape2D" parent="player"]
visible = false
position = Vector2( 0.5, 6 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="player"]
root_node = NodePath("../Sprite")
anims/RESET = SubResource( 3 )
anims/attack_1 = SubResource( 4 )
anims/attack_2 = SubResource( 5 )
anims/attack_3 = SubResource( 16 )
anims/climb = SubResource( 6 )
anims/crouch = SubResource( 7 )
anims/die = SubResource( 17 )
anims/fall = SubResource( 8 )
anims/idle = SubResource( 9 )
anims/idle_sword = SubResource( 10 )
anims/in_corner = SubResource( 11 )
anims/jump = SubResource( 12 )
anims/jump_2 = SubResource( 13 )
anims/run = SubResource( 14 )
anims/slide = SubResource( 15 )

[node name="AnimationTree" type="AnimationTree" parent="player"]
tree_root = SubResource( 18 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 19 )

[node name="attack_delay" type="Timer" parent="player"]
one_shot = true

[node name="sliding" type="Timer" parent="player"]
wait_time = 0.5
one_shot = true

[node name="slide_delay" type="Timer" parent="player"]
wait_time = 1.3
one_shot = true

[node name="ray_to_climb" type="RayCast2D" parent="player"]
visible = false
enabled = true
cast_to = Vector2( 22, -33 )

[node name="ray_to_climb_2" type="RayCast2D" parent="player"]
visible = false
enabled = true
cast_to = Vector2( 22, -25 )

[node name="ray_to_climb_3" type="RayCast2D" parent="player"]
visible = false
enabled = true
cast_to = Vector2( 0, -50 )

[node name="Camera2D" type="Camera2D" parent="player"]
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_top = 0.7
drag_margin_bottom = 0.7

[node name="camera_timer" type="Timer" parent="player/Camera2D"]
wait_time = 0.8
one_shot = true

[node name="Area2D" type="Area2D" parent="player"]

[node name="attack_area1" type="CollisionShape2D" parent="player/Area2D"]
position = Vector2( -36, -5.75 )
shape = SubResource( 67 )
disabled = true

[node name="attack_area2" type="CollisionShape2D" parent="player/Area2D"]
position = Vector2( -4.5, -37 )
shape = SubResource( 68 )
disabled = true

[node name="attacking_1" type="Timer" parent="player/Area2D"]
wait_time = 0.7

[node name="attacking_2" type="Timer" parent="player/Area2D"]
wait_time = 0.4

[node name="attacking_3" type="Timer" parent="player/Area2D"]
wait_time = 0.7

[node name="Node2D" parent="." instance=ExtResource( 74 )]
position = Vector2( -1, -18 )

[connection signal="timeout" from="player/attack_delay" to="player" method="_on_attack_delay_timeout"]
[connection signal="timeout" from="player/sliding" to="player" method="_on_sliding_timeout"]
[connection signal="timeout" from="player/slide_delay" to="player" method="_on_slide_delay_timeout"]
[connection signal="timeout" from="player/Camera2D/camera_timer" to="player" method="_on_camera_timer_timeout"]
[connection signal="timeout" from="player/Area2D/attacking_1" to="player" method="_on_attacking_1_timeout"]
[connection signal="timeout" from="player/Area2D/attacking_2" to="player" method="_on_attacking_2_timeout"]
[connection signal="timeout" from="player/Area2D/attacking_3" to="player" method="_on_attacking_3_timeout"]
